plugins {
  id 'idea'
  id "org.jetbrains.gradle.plugin.idea-ext" version "1.3"
}

def ghostRefScript = file(findProperty('ghostRefIndex') ?: '')
if (ghostRefScript.exists()) apply from: ghostRefScript

subprojects {

  apply plugin: 'java'

  java.toolchain.languageVersion = JavaLanguageVersion.of(25)
  java.withSourcesJar()
  java.withJavadocJar()

  repositories {
    mavenCentral()
    maven {
      url "https://www.cursemaven.com"
      content {
        includeGroup "curse.maven"
      }
    }
  }

  dependencies {
    configurations.configureEach {
      resolutionStrategy.force 'org.ow2.asm:asm:9.8'
      resolutionStrategy.force 'org.ow2.asm:asm-commons:9.8'
    }
  }

  tasks.register('wrapper', Wrapper) {
    gradleVersion = '9.2.1'
    distributionType = Wrapper.DistributionType.BIN
  }

  tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
  }

  tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
  }

  tasks.withType(Javadoc).configureEach {
    enabled = false
  }

  tasks.register("prepareKotlinBuildScriptModel") {}

  idea {
    module {
      downloadSources = true
      downloadJavadoc = true
    }
  }
}
